# Static

./: main.py  pyproject.toml
docs/: index.html
sass/: _Base.scss  _Blockquote.scss  _Code.scss  _Nav.scss
site/: index.html
site/static/: style.css
static/: style.css
templates/: head.html  index.html  nav.html
